syntax = "proto3";
package pb;

import "user.proto";

option go_package = "backend-masterclass/rpc";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  UserResponse body = 1;
}